--- a/Joushinomimi/Model/Base.lproj/Main.storyboard
+++ b/Joushinomimi/Model/Base.lproj/Main.storyboard
@@ -231,37 +231,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OGf-fD-noI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2634.7826086956525" y="831.69642857142856"/>
+            <point key="canvasLocation" x="2635" y="832"/>
         </scene>
-        <!--Search View Controller-->
+        <!--検索-->
         <scene sceneID="tkq-NW-TDa">
             <objects>
                 <viewController storyboardIdentifier="Search" id="ACP-IQ-H7H" customClass="SearchViewController" customModule="Joushinomimi" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Zzd-Qf-vsd">
+                    <searchBar key="view" contentMode="redraw" id="G5K-Vi-tvT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="検索窓に検索するワードを入力してください。" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAJ-V2-11v">
-                                <rect key="frame" x="16" y="104" width="382" height="742"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="QAJ-V2-11v" firstAttribute="top" secondItem="jBQ-mq-ne5" secondAttribute="top" constant="16" id="0TV-rn-LPT"/>
-                            <constraint firstItem="jBQ-mq-ne5" firstAttribute="bottom" secondItem="QAJ-V2-11v" secondAttribute="bottom" constant="16" id="OCo-rd-fPv"/>
-                            <constraint firstItem="jBQ-mq-ne5" firstAttribute="trailing" secondItem="QAJ-V2-11v" secondAttribute="trailing" constant="16" id="QL1-9W-9Ap"/>
-                            <constraint firstItem="QAJ-V2-11v" firstAttribute="leading" secondItem="jBQ-mq-ne5" secondAttribute="leading" constant="16" id="mPN-e4-6ek"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="jBQ-mq-ne5"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="XVz-6z-YKR"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </searchBar>
+                    <navigationItem key="navigationItem" title="検索" id="j4M-Gc-gzY"/>
+                    <connections>
+                        <outlet property="searchBar" destination="G5K-Vi-tvT" id="KYc-9f-L09"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fqv-Iq-Xts" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1806" y="830"/>
+            <point key="canvasLocation" x="1806" y="832"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="9kZ-3T-zQm">
@@ -307,6 +295,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NDc-9g-3HQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="986" y="832"/>
+        </scene>
+        <!--Search Result View Controller-->
+        <scene sceneID="dCu-bH-79z">
+            <objects>
+                <viewController id="LeL-78-pkW" customClass="SearchResultViewController" customModule="Joushinomimi" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pay-gn-RCX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xba-zd-105">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xba-zd-105" firstAttribute="top" secondItem="dji-Bo-dQt" secondAttribute="top" id="5cb-a3-kvs"/>
+                            <constraint firstItem="dji-Bo-dQt" firstAttribute="bottom" secondItem="xba-zd-105" secondAttribute="bottom" id="Yny-BS-CLe"/>
+                            <constraint firstItem="xba-zd-105" firstAttribute="leading" secondItem="dji-Bo-dQt" secondAttribute="leading" id="tEs-NI-a3u"/>
+                            <constraint firstItem="dji-Bo-dQt" firstAttribute="trailing" secondItem="xba-zd-105" secondAttribute="trailing" id="ukC-wN-Tw0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dji-Bo-dQt"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchTableView" destination="xba-zd-105" id="kaS-L1-bfs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ufd-8j-EyN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1806" y="1554"/>
         </scene>
         <!--Image Select View Controller-->
         <scene sceneID="XKk-iz-cck">
@@ -376,7 +394,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WYq-Nm-gso" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3452" y="832"/>
+            <point key="canvasLocation" x="3451" y="832"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="q4J-JA-Ljb">
@@ -387,7 +405,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G25-Jv-iCH">
-                                <rect key="frame" x="57" y="646" width="300" height="40"/>
+                                <rect key="frame" x="-93" y="646" width="600" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="LQo-In-wvi"/>
                                 </constraints>
@@ -397,7 +415,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3F-JS-t73">
-                                <rect key="frame" x="57" y="696" width="300" height="40"/>
+                                <rect key="frame" x="-93" y="736" width="600" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="aSO-FE-en6"/>
                                 </constraints>
@@ -414,7 +432,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="イラスト３" translatesAutoresizingMaskIntoConstraints="NO" id="8SZ-Fl-50z">
-                                <rect key="frame" x="20" y="98" width="374" height="128.00000000000023"/>
+                                <rect key="frame" x="20" y="98" width="374" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8SZ-Fl-50z" secondAttribute="height" multiplier="187:64" id="Wzg-1c-FMN"/>
                                 </constraints>
@@ -575,24 +593,6 @@
             <point key="canvasLocation" x="3558" y="-108"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Qhs-gS-Bby">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hxa-zn-HXC" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J3n-Xb-Pjc">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ACP-IQ-H7H" kind="relationship" relationship="rootViewController" id="c8R-H1-Bli"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="g9U-Wx-srA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1806" y="138"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="Wcw-5G-Itt">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nTr-A6-7KN" sceneMemberID="viewController">
@@ -609,6 +609,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m1T-oD-jyT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1805.7971014492755" y="-565.17857142857144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wSO-Ru-YCh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sU0-VD-9gB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ya8-ts-tHa">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ACP-IQ-H7H" kind="relationship" relationship="rootViewController" id="ldZ-R8-nve"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FvR-gn-o4K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1806" y="129"/>
         </scene>
     </scenes>
     <resources>
